syntax = "proto2";

import "cloud/blockstore/tools/common/go/cms/proto/console_base.proto";
import "cloud/blockstore/tools/common/go/cms/proto/console_tenant.proto";
import "cloud/blockstore/tools/common/go/cms/proto/console_config.proto";

option go_package = "a.yandex-team.ru/cloud/blockstore/tools/common/go/cms/proto;kikimr";

package NKikimrConsole;

message TConfig {
    //optional TTenantsConfig TenantsConfig = 1;
    optional TConfigsConfig ConfigsConfig = 2;
}

message TGetConfigRequest {
}

message TGetConfigResponse {
    optional TConfig Config = 1;
}

message TSetConfigRequest {
    optional TConfig Config = 1;
    optional TConfigItem.EMergeStrategy Merge = 2 [default = OVERWRITE];
}

message TSetConfigResponse {
    optional TStatus Status = 1;
}
